--- a/gradio_sms_text_classification.ipynb
+++ b/gradio_sms_text_classification.ipynb
@@ -43,18 +43,19 @@
     "    The fitted pipeline is returned to make future predictions.\n",
     "    \"\"\"\n",
     "    # Set the features variable to the text message column.\n",
-    "    \n",
+    "    X = sms_text_df['text_message']  \n",
     "    # Set the target variable to the \"label\" column.\n",
-    "   \n",
+    "    y= sms_text_df['label']\n",
     "\n",
     "    # Split data into training and testing and set the test_size = 33%\n",
-    "    \n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)\n",
     "\n",
     "    # Build a pipeline to transform the test set to compare to the training set.\n",
-    "    \n",
+    "    text_clf = Pipeline([('tfidf', TfidfVectorizer(stop_words='english')),\n",
+    "                     ('clf', LinearSVC()),])\n",
     "\n",
     "    # Fit the model to the transformed training data and return model.\n",
-    "    return "
+    "    return text_clf.fit(X_train, y_train)  "
    ]
   },
   {
@@ -139,17 +140,30 @@
     }
    ],
    "source": [
-    "# Load the dataset into a DataFrame\n"
+    "# Load the dataset into a DataFrame\n",
+    "sms_text_df = pd.read_csv('Resources/SMSSpamCollection.csv')\n",
+    "sms_text_df.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/ai_dev/lib/python3.10/site-packages/sklearn/svm/_classes.py:31: FutureWarning: The default value of `dual` will change from `True` to `'auto'` in 1.5. Set the value of `dual` explicitly to suppress the warning.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Call the sms_classification function with the DataFrame and set the result to the \"text_clf\" variable\n",
-    "text_clf = "
+    "\n",
+    "text_clf = sms_classification(sms_text_df)\n",
+    " "
    ]
   },
   {
@@ -160,25 +174,27 @@
    "source": [
     "# Create a function called `sms_prediction` that takes in the SMS text and predicts the whether the text is \"not spam\" or \"spam\". \n",
     "# The function should return the SMS message, and say whether the text is \"not spam\" or \"spam\".\n",
-    "def sms_prediction(text):\n",
+    "# Define the function to be used in the Gradio app\n",
+    "def sms_prediction(text1, text2, text3, text4):\n",
     "    \"\"\"\n",
-    "    Predict the spam/ham classification of a given text message using a pre-trained model.\n",
+    "    Predict the spam/ham classification of four text messages using a pre-trained model.\n",
     "\n",
     "    Parameters:\n",
-    "    - text (str): The text message to be classified.\n",
+    "    - text1, text2, text3, text4 (str): The text messages to be classified.\n",
     "\n",
     "    Returns:\n",
-    "    - str: A message indicating whether the text message is classified as spam or not.\n",
-    "\n",
-    "    This function takes a text message and a pre-trained pipeline model, then predicts the\n",
-    "    spam/ham classification of the text. The result is a message stating whether the text is\n",
-    "    classified as spam or not.\n",
+    "    - list: A list of strings indicating whether each text message is classified as spam or not.\n",
     "    \"\"\"\n",
-    "    # Create a variable that will hold the prediction of a new text.\n",
+    "    texts = [text1, text2, text3, text4]\n",
+    "    predictions = text_clf.predict(texts)\n",
     "    \n",
-    "    # Using a conditional if the prediction is \"ham\" return the message:\n",
-    "    # f'The text message: \"{text}\", is not spam.' Else, return f'The text message: \"{text}\", is spam.'\n",
-    "    "
+    "    # Format the results for each input text\n",
+    "    results = [\n",
+    "        f'Text {i+1}: \"{texts[i]}\" - {\"Spam\" if predictions[i] == \"spam\" else \"Not Spam\"}'\n",
+    "        for i in range(len(texts))\n",
+    "    ]\n",
+    "    \n",
+    "    return results"
    ]
   },
   {
@@ -190,7 +206,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7860\n",
+      "Running on local URL:  http://127.0.0.1:7876\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -198,7 +214,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7876/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -220,8 +236,17 @@
     "# Create a sms_app that takes a textbox for the inputs and has a textbox for the output.  \n",
     "# Povide labels for each textbox. \n",
     "\n",
-    "    \n",
-    "# Launch the app.\n"
+    "# Create the Gradio app interface\n",
+    "app = gr.Interface(\n",
+    "    fn=sms_prediction,  # The function to be called for predictions\n",
+    "    inputs=[gr.Textbox(lines=3, placeholder=\"Enter SMS text here...\", label=f\"Input SMS Text {i+1}\") for i in range(4)],  # Four Textbox inputs\n",
+    "    outputs=[gr.Textbox(lines=2, label=f\"Result for Text {i+1}\") for i in range(4)],  # Four Textbox outputs for the results\n",
+    "    title=\"SMS Spam Classifier\",  # Title of the app\n",
+    "    description=\"Enter up to 4 SMS texts to check if they are classified as spam or not.\"  # Description of the app\n",
+    ")\n",
+    "\n",
+    "# Launch the app\n",
+    "app.launch(show_error=True)"
    ]
   },
   {
@@ -237,20 +262,13 @@
     "3. You won 2 free tickets to the Super Bowl text us to claim your prize.\n",
     "4. Thanks for registering. Text 4343 to receive free updates on medicare."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ai_dev",
    "language": "python",
-   "name": "python3"
+   "name": "ai_dev"
   },
   "language_info": {
    "codemirror_mode": {
@@ -262,9 +280,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
